[package]
name = "needle"
version = "0.1.0"
edition = "2021"

[dependencies]
const-decoder = "0.4.0"
ansi-x963-kdf = { version = "0.0.1", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"]}
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.1", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52833", "time-driver-rtc1"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-alloc = "0.6.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "critical-section-impl", "nrf52833", "s140", "defmt"] }
nrf52833-hal = "0.18.0"
num-bigint = { version = "0.4.6", default-features = false }
p224 = { version = "0.13.2", default-features = false, features = ["arithmetic"]}
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rand = { version = "0.6.4", default-features = false }
sha2 = { version = "=0.11.0-pre.4", default-features = false }
