[package]
name = "offline-finding"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
ansi-x963-kdf = { version = "0.0.1", default-features = false }
anyhow = { version = "1.0.96", default-features = false }
bincode = { version = "1.3.3", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
p224 = { version = "0.13.2", default-features = false, features = [
	"arithmetic",
	"ecdh",
	"serde",
	"pkcs8",
] }
rand_core = { version = "=0.6.4", default-features = false }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.15", default-features = false }
serde_with = { version = "3.12.0", default-features = false, features = [
	"macros",
] }
sha2 = { version = "=0.11.0-pre.4", default-features = false }

[dev-dependencies]
const-decoder = { version = "0.4.0" }
rand = "0.8.5"
